--- a/index.html
+++ b/index.html
@@ -15,28 +15,17 @@
       padding: 0;
       font-family: sans-serif;
       background-color: #ededed;
-    }
-    polaris-chip {
-      margin: 16px;
-    }
+    } 
+
   </style>
-  <title>polaris-chip / my-card</title>
+  <title>Project 2 / Image-Gallery</title>
 </head>
 
 <body>
-  <h1>polaris-chip</h1>
-  <!-- this is going to do whatever the tag's defaults are -->
-  <polaris-chip title="News of Record" link="https://psu.edu/"></polaris-chip>
-  <polaris-chip title="Faculty and Staff"></polaris-chip>
-  <polaris-chip title="Sports are the only thing that matter"></polaris-chip>
-  <polaris-chip title="Grants and donations"></polaris-chip>
+  <h1>image-gallery</h1>
+  <image-gallery></image-gallery>
 
-  <h1>my-card</h1>
-  <my-card></my-card>
-
-  <!-- this is what is bringing in the definition for this tag -->
-  <script type="module" src="./src/polaris-chip.js"></script>
-  <script type="module" src="./src/my-card.js"></script>
+  <script type="module" src="./src/image-gallery.js"></script>
 </body>
 
 </html>
